--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -116,7 +116,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we write a function to do the testing. This function requires inputs of the number of points to be indexed in a tree, the number of points to be queried, and a boolean variable to specify if we need verbose (wordy) output."
+    "Now we write a function to do the testing. This function requires inputs of the number of points to be indexed in a tree, the number of points to be queried, and a boolean variable to specify if we need verbose (wordy) output.\n",
+    "\n",
+    "## <font color=\"red\">Question 1</font>\n",
+    "\n",
+    "Complete the `# TODO` part below."
    ]
   },
   {
@@ -126,51 +130,37 @@
    "outputs": [],
    "source": [
     "def test(npts, n, verbose=False):\n",
-    "    points = [Point(random(), random()) for i in range(npts)]\n",
-    "    time1 = time.time()\n",
-    "    kdt1 = kdtree(points)\n",
-    "    time2 = time.time()\n",
-    "    treet1 = time2-time1\n",
-    "    time1 = time.time()\n",
-    "    kdt2 = kdtree2(points)\n",
-    "    time2 = time.time()\n",
-    "    treet2 = time2-time1\n",
-    "    time1 = time.time()\n",
-    "    kdt3 = pointquadtree(points)\n",
-    "    time2 = time.time()\n",
-    "    treet3 = time2-time1\n",
-    "    \n",
-    "    t1 = 0 # time finding n points in kdtree\n",
-    "    t2 = 0 # time for balanced kdtree\n",
-    "    t3 = 0 # time for point quadtree\n",
-    "    t4 = 0 # time for linear search\n",
-    "    pp = sample(points, n)\n",
-    "    for p in pp:\n",
-    "        time1 = time.time()\n",
-    "        p1 = query_kdtree(kdt1, p)\n",
-    "        time2 = time.time()\n",
-    "        t1 = t1 + time2-time1\n",
+    "    '''\n",
+    "    A function that evaluates the performance of four different types of search using\n",
+    "        1. a k-D tree based on the order of points that is given\n",
+    "        2. a balanced k-D tree\n",
+    "        3. a point quadtree based on the order of points that is given\n",
+    "        4. a brute-force approach (linear search)\n",
     "\n",
-    "        time1 = time.time()\n",
-    "        p1 = query_kdtree(kdt2, p)\n",
-    "        time2 = time.time()\n",
-    "        t2 = t2 + time2-time1\n",
+    "    INPUT\n",
+    "        npts    - the number of points to be searched from\n",
+    "                    the actual points will be randomly generated \n",
+    "                    where the coordinates of each point range from 0 to 1\n",
+    "        n       - the number of points to be searched\n",
+    "                    the actual points to be searched will be randomly sampled from npts\n",
+    "        verbose - a boolean value (True - print out more info, False - no print out)\n",
+    "                    when True, print out the format as follows:\n",
+    "                        10000 |  0.135  0.050  0.065 |  0.001  0.001  0.001 |  0.073\n",
+    "                    where the numbers are npts, time to build k-D tree, the balanced k-D tree, and the point quadtree, and \n",
+    "                    time to search using the k-D tree, balanced k-D tree, point quadtree, and linear search, respectively.\n",
     "\n",
-    "        time1 = time.time()\n",
-    "        p1 = search_pqtree(kdt3, p)\n",
-    "        time2 = time.time()\n",
-    "        t3 = t3 + time2-time1\n",
+    "    OUTPUT\n",
+    "        a tuple containing the 8 numbers mentioned above in the \"verbose\" section.\n",
     "\n",
-    "        time1 = time.time()\n",
-    "        for i in range(len(points)):\n",
-    "            if p == points[i]:\n",
-    "                break\n",
-    "        time2 = time.time()\n",
-    "        t4 = t4 + time2-time1\n",
+    "    Example\n",
     "\n",
-    "    if verbose:\n",
-    "        print(f'{npts:7} | {treet1:6.3f} {treet2:6.3f} {treet3:6.3f} | {t1:6.3f} {t2:6.3f} {t3:6.3f} | {t4:6.3f}')\n",
-    "    return npts, treet1, treet2, treet3, t1, t2, t3, t4"
+    "        >>> t1 = test(10000, 100, True)\n",
+    "          10000 |  0.135  0.050  0.065 |  0.001  0.001  0.001 |  0.073\n",
+    "        >>> print(t1)\n",
+    "        (10000, 0.13518762588500977, 0.04988360404968262, 0.0650629997253418, 0.0009088516235351562, 0.0006577968597412109, 0.0006163120269775391, 0.0731801986694336)\n",
+    "    '''\n",
+    "    # TODO: complete the code below\n",
+    "    \n"
    ]
   },
   {
@@ -188,7 +178,8 @@
    },
    "outputs": [],
    "source": [
-    "t1 = test(10000, 100, True)"
+    "t1 = test(10000, 100, True)\n",
+    "print(t1)"
    ]
   },
   {
@@ -375,7 +366,11 @@
     "    return l\n",
     "\n",
     "def rand_point(rect):\n",
-    "    '''generates a random point within a rect'''\n",
+    "    '''\n",
+    "    Generates a random point within a rect.\n",
+    "\n",
+    "    rect = [[xmin, xmax], [ymin, ymax]]\n",
+    "    '''\n",
     "    x = uniform(rect[0][0], rect[0][1])\n",
     "    y = uniform(rect[1][0], rect[1][1])\n",
     "    return Point(x, y)\n",
@@ -471,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 1</font>\n",
+    "## <font color=\"red\">Question 2</font>\n",
     "\n",
     "The above code does not report the total time. We can probably go back and re-run the code to get the total time, but we will have to wait another round. Luckily, we did print out the time returned by the `test_rect_find` function, which tell us the average time for each query. The printout is formatted in a specific way and we can definitely utilize that to get the total time. \n",
     "\n",
@@ -551,6 +546,7 @@
     "    w = sizes[i]\n",
     "    axs[i].plot(new_data[w][0], new_data[w][1], color='grey', label='k-D tree')\n",
     "    axs[i].plot(new_data[w][0], new_data[w][2], color='r', label='Linear')\n",
+    "    #plt.xticks([sizes[j]/100 for j in range(len(sizes)) if j%3==0])\n",
     "    axs[i].xaxis.set_ticks([2, 4, 6, 8])\n",
     "    axs[i].text(0.5, panel_label_y, f'{w//1000}K')\n",
     "    \n",
@@ -587,7 +583,21 @@
     "    Z1 = Z1[:n_neighbor]\n",
     "    return Z1\n",
     "\n",
-    "def test_nn_find(rect=[[10,1000], [10,1000]], n_neighbor=10, npts=100, n_query=10):\n",
+    "def test_nn_find(rect=[[10,1000], [10,1000]], npts=100, n_neighbor=10, n_query=10):\n",
+    "    '''\n",
+    "    Tests the performance of nearest neighbor search using a balanced k-D tree, \n",
+    "    a point quadtree, and the brute force approach. The brute-force approach (linear search)\n",
+    "    is done using the above function called nn_linear.\n",
+    "\n",
+    "    INPUT\n",
+    "        rect        - a list of lists defining the rectangle as [ [xmin, xmax], [ymin, ymax] ]\n",
+    "        npts        - the number of points to search from\n",
+    "        n_neighbor  - the number of neighbors to find\n",
+    "        n_query     - number of times to repeat the search\n",
+    "\n",
+    "    OUTPUT\n",
+    "        check the code and text (answer this in Question 3 below)\n",
+    "    '''\n",
     "    randpoints0 = [rand_point(rect) for i in range(npts)]\n",
     "    randpoints = copy.deepcopy(randpoints0)\n",
     "    pqt = pointquadtree(randpoints0)\n",
@@ -601,7 +611,7 @@
     "        t2 = time.time()\n",
     "        nnp2 = pq_nearest_neighbor_query(pqt, p, n_neighbor)\n",
     "        t3 = time.time()\n",
-    "        nnp3 = nn_linear(p, randpoints, n_neighbor)\n",
+    "        nnp3 = nn_linear(p, randpoints, n_neighbor) # use points in the original order\n",
     "        t4 = time.time()\n",
     "        times.append((t2-t1, t3-t2, t4-t3))\n",
     "    return sum([t[0] for t in times])/n_query, sum([t[1] for t in times])/n_query, sum([t[2] for t in times])/n_query\n"
@@ -633,7 +643,7 @@
     "results_nn = []\n",
     "for npts in range(200000, 1000001, 200000):\n",
     "    for n in [25, 50, 100, 200, 400, 800]:\n",
-    "        x = test_nn_find(n_neighbor=n, npts=npts)\n",
+    "        x = test_nn_find(npts=npts, n_neighbor=n)\n",
     "        x = npts, n, x[0], x[1], x[2]\n",
     "        results_nn.append(x)\n",
     "        print(x)"
@@ -643,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 2</font>\n",
+    "## <font color=\"red\">Question 3</font>\n",
     "\n",
     "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree (a k-D tree, a point quadtree, or both) from the above experiment. Again, we don't need to re-run the code. Instead, use the results printed above, where the first two lines of the printout look like this:\n",
     "\n",
@@ -681,16 +691,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(test_nn_find(n_neighbor=10, npts=100000))\n",
-    "print(test_nn_find(n_neighbor=25, npts=100000))\n",
-    "print(test_nn_find(n_neighbor=10000, npts=100000))"
+    "print(test_nn_find(npts=100000, n_neighbor=10))\n",
+    "print(test_nn_find(npts=100000, n_neighbor=25))\n",
+    "print(test_nn_find(npts=100000, n_neighbor=10000))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 3</font>\n",
+    "## <font color=\"red\">Question 4</font>\n",
     "\n",
     "In the output of the above code we should see something like this in each line:\n",
     "\n",
@@ -729,10 +739,10 @@
    },
    "outputs": [],
    "source": [
-    "print(test_nn_find(n_neighbor=10, npts=250))\n",
-    "print(test_nn_find(n_neighbor=50, npts=250))\n",
-    "print(test_nn_find(n_neighbor=100, npts=250))\n",
-    "print(test_nn_find(n_neighbor=200, npts=250))"
+    "print(test_nn_find(npts=250, n_neighbor=10))\n",
+    "print(test_nn_find(npts=250, n_neighbor=50))\n",
+    "print(test_nn_find(npts=250, n_neighbor=100))\n",
+    "print(test_nn_find(npts=250, n_neighbor=200))"
    ]
   }
  ],
