--- a/computational_issues-colab.ipynb
+++ b/computational_issues-colab.ipynb
@@ -159,6 +159,11 @@
     "        (10000, 0.13518762588500977, 0.04988360404968262, 0.0650629997253418, 0.0009088516235351562, 0.0006577968597412109, 0.0006163120269775391, 0.0731801986694336)\n",
     "    '''\n",
     "    # TODO: complete the code below\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "    \n"
    ]
   },
@@ -178,6 +183,7 @@
    "outputs": [],
    "source": [
     "t1 = test(10000, 100, True)\n",
+    "\n",
     "print(t1)"
    ]
   },
@@ -204,6 +210,7 @@
     "alltime = []\n",
     "for npts in range(100000, 1000001, 100000):\n",
     "    alltime.append(test(npts, n, True))\n",
+    "\n",
     "time2=time.time()"
    ]
   },
@@ -478,14 +485,14 @@
     "\n",
     "and we can simply add a comma at the end of every line (except the last) and then put it in a pair of brackets. We then assign it to a variable:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "myresults = [ \n",
     "(100000, 25, 0.00013082027435302735, 0.015203642845153808),\n",
     "(100000, 50, 0.0003963470458984375, 0.015846920013427735)\n",
     "]\n",
     "```\n",
     "\n",
-    "This will create a valid Python data structure that allows us to do necessary calculation. Please also note that the time reported here is the average time per query, so it is important to account for the number of runs when computing the total time. You will need to examine the original code to see how the average is calculated."
+    "This will create a valid Python data structure that allows us to do necessary calculation. Please also note that the time reported here is the average time per query, so it is important to account for the number of runs when computing the total time. You will need to examine the original code to see how the average is calculated. The time computed using our code should be close to what the %%time magic command tells us."
    ]
   },
   {
@@ -505,7 +512,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, at this point, we have a lot of data in `results` to visualize. Here we show the dominating trends in the data using a subset of the results. More specifically, we want to draw a series of 10 plots in a row where each corresponds to one of the 10 sizes (from 100 K to 1 million). On each plot, the horizontal axis is the width of rectangle (from 25 to 800) and the vertical is the time. To do so, we need to reorganize the data in `results` into a dictionary where the keys are the data sizes, and each key is associated with a list of three values: width in hundreds, time for k-D tree, and time for linear search. We initialize the dictionary using a dictionary comprehension with empty lists and then append the corresponding values from `results` using a loop:"
+    "## <font color=\"red\">Question 3</font>\n",
+    "\n",
+    "Now, at this point, we have a lot of data in `results` to visualize. We want to draw a series of 10 plots in a row where each corresponds to one of the 10 sizes (from 100 K to 1 million). On each plot, the horizontal axis is the width of rectangle (from 25 to 800) and the vertical is the time. \n",
+    "\n",
+    "To do so, we need to **reorganize** the data in `results` using a dictionary where the keys are the data sizes, and the value associated with each key is a list of three lists: a list of all the widths in hundreds associated with the size,  all the times used to search the k-D tree, and times for linear search. The following is an example of the first two items in the dictionary where only the first two values in each list are shown:\n",
+    "\n",
+    "```python\n",
+    "{\n",
+    "100000: [ [0.25, 0.5, ...], [0.00013082027435302735, 0.0003963470458984375], [0.015203642845153808, 0.015846920013427735] ],\n",
+    "200000: [ [0.25, 0.5, ...], [0.00014896392822265624, 0.0004911422729492188], [0.01960759162902832, 0.0219163179397583] ]\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "We initialize the dictionary using a dictionary comprehension with empty lists and then append the corresponding values from `results` using a loop. The code should be completed below:"
    ]
   },
   {
@@ -514,19 +534,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# initiate the dictionary\n",
     "new_data = {w: [[], [], []] for w in range(100000, 1000001, 100000)}\n",
     "\n",
-    "# Can also be done using the following:\n",
-    "# new_data = {}\n",
-    "# sizes = range(100000, 1000001, 100000)\n",
-    "# for w in sizes:\n",
-    "#     new_data[w] = [[], [], []]    \n",
+    "# TODO: Complete the code to populate data into the dictionary\n",
     "\n",
-    "for r in results:\n",
-    "    w = r[0]\n",
-    "    new_data[w][0].append(r[1]/100) # width in hundreds\n",
-    "    new_data[w][1].append(r[2])\n",
-    "    new_data[w][2].append(r[3])"
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The newly organized data will be proven convenient when we draw the plots:"
    ]
   },
   {
@@ -563,7 +584,9 @@
    "source": [
     "## 3. Performance of nearest neighbor search\n",
     "\n",
-    "Now we test the performance of nearest neighbor search using three methods: k-D tree, point quadtree, and linear search (`nn_linear`). Here are some necessary functions for the testing."
+    "Now we test the performance of nearest neighbor search using three methods: k-D tree, point quadtree, and linear search (`nn_linear`). We did not discuss nearest neighbor search the class in this semester, but the algorithms are similar to those of orthogonal and circular searches. Please refer to Sections 5.1.3 and 6.2 of *GIS Algorithms* for more detailed discussions about nearest neighbor search.\n",
+    "\n",
+    "Here are some necessary functions for the testing."
    ]
   },
   {
@@ -652,16 +675,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 3</font>\n",
+    "## <font color=\"red\">Question 4</font>\n",
     "\n",
-    "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree (a k-D tree, a point quadtree, or both) from the above experiment. Again, we don't need to re-run the code. Instead, use the results printed above, where the first two lines of the printout look like this:\n",
-    "\n",
-    "```\n",
-    "(200000, 25, 0.0004232645034790039, 0.0017875194549560546, 0.3703118324279785),\n",
-    "(200000, 50, 0.0008641958236694336, 0.0032688140869140624, 0.37016251087188723)\n",
-    "```\n",
-    "\n",
-    "We did not discuss nearest neighbor search the class in this semester, but the algorithms are similar to those of orthogonal and circular searches. Please refer to Sections 5.1.3 and 6.2 of *GIS Algorithms* for more detailed discussions about nearest neighbor search.\n"
+    "Plot a figure that can show the time complexity trend of nearest neighbor search using a tree (a k-D tree, a point quadtree, or both) from the above experiment. Use the data in `results_nn` to do this. We can use something very similar to the previous section, but note now we have three times, k-D tree, quadtree, and linear search, respectively."
    ]
   },
   {
@@ -672,9 +688,7 @@
    "source": [
     "# TODO\n",
     "#\n",
-    "#    Double click on this cell and write your code to answer the above question.\n",
-    "\n",
-    "\n"
+    "#    Write your code here to answer the above question.\n"
    ]
   },
   {
@@ -690,6 +704,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "print(test_nn_find(npts=100000, n_neighbor=10))\n",
     "print(test_nn_find(npts=100000, n_neighbor=25))\n",
     "print(test_nn_find(npts=100000, n_neighbor=10000))"
@@ -699,35 +714,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 4</font>\n",
-    "\n",
-    "In the output of the above code we should see something like this in each line:\n",
-    "\n",
-    "```\n",
-    "(11.019792795181274, 29.53496918678284, 0.2186837911605835)\n",
-    "```\n",
-    "\n",
-    "What does each of these three numbers mean? What can we learn from this result? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO\n",
-    "#\n",
-    "#    Double click on this cell and answer the above question here.\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can do more tests on a smaller tree:"
+    "We can do some similar tests, but on a much smaller data set (and therefore much smaller trees):"
    ]
   },
   {
@@ -738,6 +725,7 @@
    },
    "outputs": [],
    "source": [
+    "%%time\n",
     "print(test_nn_find(npts=250, n_neighbor=10))\n",
     "print(test_nn_find(npts=250, n_neighbor=50))\n",
     "print(test_nn_find(npts=250, n_neighbor=100))\n",
