--- a/recursive-functions-colab.ipynb
+++ b/recursive-functions-colab.ipynb
@@ -14,7 +14,91 @@
     ">\n",
     "><cite>Lewis Carroll, Alice's Adventures in Wonderland</cite>\n",
     "\n",
-    "A function can call itself. When a function is written in this way, we call it a **recursive** function. To understand how it works for recursive functions, we first examine a void function. As we know, this type of functions do not return anything (except for a `None`). We will use the `print` statement to illustrate the secrets of recursive functions. We start with the countdown function from the *Think Python* book. \n",
+    "Before we move to discuss recursions, we will examine what happens when a function calls other functions. We have seen this before, but we need some further understand on how function calls work, let's try the following functions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f1():\n",
+    "    print('LEVEL 1 -- -- -- -- -- 1A')\n",
+    "    f2()\n",
+    "    f5()\n",
+    "    print('LEVEL 1 -- -- -- -- -- 1B')\n",
+    "\n",
+    "    \n",
+    "def f2():\n",
+    "    print('LEVEL 2 -- -- -- -- 2A')\n",
+    "    f3()\n",
+    "    print('LEVEL 2 -- -- -- -- 2B')\n",
+    "    \n",
+    "def f3():\n",
+    "    print('LEVEL 3 -- -- 3A')\n",
+    "    f4()\n",
+    "    f5()\n",
+    "    f4()\n",
+    "    print('LEVEL 3 -- -- 3B')\n",
+    "    \n",
+    "def f4():\n",
+    "    print('LEVEL 4 -- 4A')\n",
+    "    f5()\n",
+    "    print('LEVEL 4 -- 4B')\n",
+    "    \n",
+    "def f5():\n",
+    "    print('LEVEL 5 5A')\n",
+    "    print('LEVEL 5 5B')\n",
+    "    \n",
+    "f1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function calls are executed like making a stack. The most recent call is put on the top of the stack. If the function at the top of the stack is not calling another function, it will be removed from the stack. Otherwise, we continue to put functions on the top of the stack. The general mechanism for us (and computers as well) to handle a stack is to maintain a first-in-last-out policy. So, the above example will see the stack changes like the following:\n",
+    "\n",
+    "```\n",
+    "                        f5                      f5\n",
+    "                  f4    f4    f4    f5    f4    f4    f4\n",
+    "            f3    f3    f3    f3    f3    f3    f3    f3    f3\n",
+    "      f2    f2    f2    f2    f2    f2    f2    f2    f2    f2    f2    f5\n",
+    "f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> f1 -> \n",
+    "```\n",
+    "\n",
+    "The following function `shampoo` mimics some directions that you may find on the back of your shampoo bottle. Don't run this. But why?\n",
+    "\n",
+    "```python\n",
+    "def shampoo():\n",
+    "    shampoo = True\n",
+    "    while shampoo:\n",
+    "        lather() \n",
+    "        rinse()\n",
+    "        print('I repeat...')\n",
+    "    print('I am done!')\n",
+    "\n",
+    "def lather():\n",
+    "    print('I lather')\n",
+    "    \n",
+    "def rinse():\n",
+    "    print('I rinse')\n",
+    "```\n",
+    "\n",
+    "So we should be careful when we nesting function calls. Of course we can terminate the while loop by pressing Ctrl-C.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Introducing recursion\n",
+    "\n",
+    "Now, we look at what happens when a function cans itself. \n",
+    "\n",
+    "First, let's get the terminology right: a function that calls itself is a **recursive** function. To understand how it works for recursive functions, we start with a void function. As we know, this type of functions do not return anything (except for a `None`). We will use the `print` statement to illustrate the secrets of recursive functions. We start with the countdown function from the *Think Python* book. \n",
     "\n",
     "[This video](https://mediasite.osu.edu/Mediasite/Play/214375ce933e48bfbe44130ee9876ebf1d) also explains how this function works. "
    ]
@@ -474,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
