--- a/recursive-functions-colab.ipynb
+++ b/recursive-functions-colab.ipynb
@@ -136,7 +136,18 @@
     "```\n",
     "Function calls                         Output (print)\n",
     "\n",
-    "\n",
+    "+-- countdown(3)\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
+    "|\n",
     "```\n",
     "\n",
     "We can make a few changes to make the countdown process faster. Let's change the last line in the function to the following two and see what happens.\n",
@@ -162,7 +173,6 @@
     "\n",
     "def countdown_loop(n):\n",
     "    pass\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -213,7 +223,6 @@
     "| \n",
     "| \n",
     "| \n",
-    "\n",
     "```"
    ]
   },
@@ -238,8 +247,6 @@
     "    pass\n",
     "\n",
     "\n",
-    "\n",
-    "            \n",
     "countdown2_loop(3)"
    ]
   },
@@ -425,6 +432,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO\n",
+    "\n",
     "The following diagram shows how function `rtotal2` works when given an input of `[6, 3, 10, 8]`. Please replace the parts marked by the question marks with the actual function call or the output.\n",
     "\n",
     "```\n",
@@ -440,8 +449,8 @@
     "|  |  |  +-- return 0                     0\n",
     "|  |  +-- return 3 + 6 + 0                9\n",
     "|  +-- rtotal2([8])\n",
-    "|  |  +-- return 8                        8\n",
-    "|  +-- return 10 + 9 + 8                  27\n",
+    "|  |  +-- ??                              ?\n",
+    "|  +-- ??                                 ?\n",
     "\n",
     "```\n",
     "\n"
