--- a/centroid-area-3.ipynb
+++ b/centroid-area-3.ipynb
@@ -34,9 +34,9 @@
     "\n",
     "The **centroid** of a polygon can be defined in various ways. However, it is common to think that the gravity center of the polygon is the centroid. If the boundaries of the polygon do not intersect, the centroid of the polygon is determined as\n",
     "\n",
-    "$x = \\frac{1}{6A} \\sum_{i=1}^n (x_i + x_{i+1}) (x_i y_i - x_{i+1}y_i)$\n",
+    "$x = \\frac{1}{6A} \\sum_{i=1}^n (x_i + x_{i+1}) (x_i y_{i+1} - x_{i+1}y_i)$\n",
     "\n",
-    "$y = \\frac{1}{6A} \\sum_{i=1}^n (y_i + y_{i+1}) (x_i y_i - x_{i+1}y_i)$\n",
+    "$y = \\frac{1}{6A} \\sum_{i=1}^n (y_i + y_{i+1}) (x_i y_{i+1} - x_{i+1}y_i)$\n",
     "\n",
     "where $A$ is the area of the polygon as calculated using the above formulas. \n",
     "\n",
