--- a/recursive-functions-colab.ipynb
+++ b/recursive-functions-colab.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/gisalgs/notebooks/blob/main/recursive-functions-colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "yAzDLWUlZaMq"
       },
       "source": [
@@ -37,35 +27,9 @@
       },
       "outputs": [],
       "source": [
-        "def f1():\n",
-        "    print('LEVEL 1 -- -- -- -- -- 1A')\n",
-        "    f2()\n",
-        "    f5()\n",
-        "    print('LEVEL 1 -- -- -- -- -- 1B')\n",
-        "\n",
-        "\n",
-        "def f2():\n",
-        "    print('LEVEL 2 -- -- -- -- 2A')\n",
-        "    f3()\n",
-        "    print('LEVEL 2 -- -- -- -- 2B')\n",
-        "\n",
-        "def f3():\n",
-        "    print('LEVEL 3 -- -- 3A')\n",
-        "    f4()\n",
-        "    f5()\n",
-        "    f4()\n",
-        "    print('LEVEL 3 -- -- 3B')\n",
-        "\n",
-        "def f4():\n",
-        "    print('LEVEL 4 -- 4A')\n",
-        "    f5()\n",
-        "    print('LEVEL 4 -- 4B')\n",
-        "\n",
-        "def f5():\n",
-        "    print('LEVEL 5 5A')\n",
-        "    print('LEVEL 5 5B')\n",
-        "\n",
-        "f1()"
+        "# TODO\n",
+        "# We are going to write some examples of function calling here\n",
+        "\n"
       ]
     },
     {
@@ -656,8 +620,7 @@
       "version": "3.13.7"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
