--- a/kd-tree-querying-colab.ipynb
+++ b/kd-tree-querying-colab.ipynb
@@ -26,17 +26,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assume: geom and indexing are already installed (shell) or cloned (notebook)\n",
-    "#         and the path is set (for shell only)"
+    "# assume: geom is already installed (shell) or cloned (notebook)\n",
+    "#         and the path is set (for shell only)\n",
+    "!git clone https://github.com/gisalgs/geom.git "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 1</font>\n",
+    "## <font color=\"red\">Question 1: testing brute force search</font>\n",
     "\n",
-    "Please complete the TODO part below and run the code cell."
+    "Please complete the two TODO parts below and run the code cell."
    ]
   },
   {
@@ -47,19 +48,35 @@
    "source": [
     "from geom.point import *\n",
     "\n",
-    "in_rect = lambda x, y, rect: not (rect[0][0]>x or rect[0][1]<x or rect[1][0]>y or rect[1][1]<y)\n",
+    "# TODO:\n",
+    "#\n",
+    "# Write one line of code that contains a lambda function that \n",
+    "#     takes three arguments, x, y, and rect (rectangle) and \n",
+    "#     returns True if the point at x, y is in the rect, and False otherwise\n",
+    "# and assigns the lambda function to a name in_rect\n",
+    "\n",
+    "# lambda function here:\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def search_all(all_points, rect):\n",
     "    '''\n",
-    "    Returns the points that fall in a rectangle\n",
+    "    Finds the points that fall in a rectangle\n",
     "    \n",
-    "    all_points    a list of Point objects\n",
-    "    rect          a rectangle encoded as  [[xmin, xmax], [ymin, ymax]]\n",
+    "    Input\n",
+    "        all_points    a list of Point objects\n",
+    "        rect          a rectangle encoded as  [[xmin, xmax], [ymin, ymax]]\n",
+    "\n",
+    "    Output\n",
+    "        found         a list containing points in rect\n",
     "    '''\n",
     "    # TODO:\n",
-    "    #    Replace the pass statement below to complete the code for a brute-force search\n",
     "    #\n",
-    "    pass\n",
+    "    #    Complete the code for a brute-force search\n",
+    "    #    Make sure the code aligns inside the function\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "# testing \n",
@@ -69,6 +86,13 @@
     "\n",
     "found = search_all(my_points, rect)\n",
     "found"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's try this on a larger data set of 1 million random points."
    ]
   },
   {
@@ -99,7 +123,11 @@
     "\n",
     "Once we have a good understanding of the code, it is time to first test the algorithm using the k-D tree we drew manually from the previous modules. Then we will set up a few points and use the following code to test the orthogonal range query on a k-D tree.\n",
     "\n",
-    "Again, the code of this algorithm is in the file called [kdtree2a.py](https://github.com/gisalgs/indexing/blob/master/kdtree2a.py) on github. We should download it and put it in the indexing folder, along with other files like `kdtree1.py` and `bst.py` as we have used before."
+    "Again, the code of this algorithm is in the file called [kdtree2a.py](https://github.com/gisalgs/indexing/blob/master/kdtree2a.py) on github. We should download it and put it in the indexing folder, along with other files like `kdtree1.py` and `bst.py` as we have used before.\n",
+    "\n",
+    "We will **import** everything from the `indexing` folder. This can be done locally or we can clone the entire repo called `indexing` from github.\n",
+    "\n",
+    "## <font color=\"red\">Question 2: testing k-D tree</front>\n"
    ]
   },
   {
@@ -108,21 +136,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from indexing.kdtree1 import *\n",
-    "from indexing.kdtree2a import *\n",
-    "from indexing.bst import *\n",
-    "\n",
-    "data1 = [ (2,2), (0,5), (8,0), (9,8), (7,14), (13,12), (14,13) ]\n",
-    "points = [Point(d[0], d[1], 0) for d in data1]\n",
-    "\n",
-    "t1 = kdtree2(points)\n",
-    "tree_print(t1)\n",
-    "\n",
-    "rect = [ [10, 14.5], [10, 13.5] ]\n",
-    "found = []\n",
-    "range_query_orthogonal(t1, rect, found)\n",
-    "print()\n",
-    "print('Found:', found)\n"
+    "!git clone https://github.com/gisalgs/indexing.git "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "# Complete the code here to \n",
+    "#    (1) import necessary modules from indexing\n",
+    "#    (2) build a balanced k-D tree using kdtree2\n",
+    "#    (3) conduct orthogonal range query \n",
+    "#    (4) print the tree\n",
+    "#\n",
+    "# still use my_points\n",
+    "#\n",
+    "\n"
    ]
   },
   {
@@ -131,8 +164,7 @@
    "source": [
     "## Validating the code\n",
     "\n",
-    "We can use the functions in matplotlib to test if the query function actually returns the right result. We will use the following couple of functions to draw points and lines.\n",
-    "\n"
+    "We can use the functions in matplotlib to test if the query function actually returns the right result. We will use the following couple of functions to draw points and lines."
    ]
   },
   {
@@ -142,17 +174,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
-    "        \n",
-    "def draw_points(pts, color, marker, size, alpha=0.7):\n",
-    "    axis = plt.scatter([p.x for p in pts], [p.y for p in pts],\n",
-    "                       marker=marker, color=color, s=size, alpha=alpha)\n",
-    "    return axis\n",
-    "\n",
-    "def draw_lines(linesxy):\n",
-    "    frame = plt.gca()\n",
-    "    l = plt.Line2D(linesxy[0], linesxy[1], color='red')\n",
-    "    frame.add_line(l)"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -168,39 +190,143 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data1 = [ (2,2), (0,5), (8,0), (9,8), (7,14), (13,12), (14,13) ]\n",
-    "\n",
-    "points = [Point(d[0], d[1]) for d in data1]\n",
-    "t2 = kdtree2(points)\n",
-    "\n",
-    "rect = [ [10, 14.5], [10, 13.5] ]\n",
-    "\n",
-    "found = []\n",
-    "range_query_orthogonal(t2, rect, found)\n",
-    "\n",
-    "linesXY = [ [rect[0][0], rect[0][1], rect[0][1], rect[0][0], rect[0][0]],\n",
-    "            [rect[1][0], rect[1][0], rect[1][1], rect[1][1], rect[1][0]] ]\n",
-    "\n",
-    "p1 = draw_points(points, 'red', 'x', 50)\n",
-    "p2 = draw_points(found, 'blue', '+', 50)\n",
-    "l = draw_lines(linesXY)\n",
-    "\n",
-    "plt.xlim([-1, 15])\n",
-    "plt.ylim([-1, 15])\n",
-    "plt.legend([p1, p2], ['All', 'Found'],  loc=4)\n",
-    "\n",
-    "ax = plt.gca()\n",
-    "ax.set_aspect(1)\n",
-    "plt.show()"
+    "# TODO\n",
+    "# \n",
+    "# Write code here to draw (1) all the points in red crosses, (2) found points in grey pluses, \n",
+    "# and (3) the rectangle box, in grey, used to search\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"red\">Question 2</font>\n",
+    "## Testing on a larger data set\n",
     "\n",
-    "If we do an orthogonal range query on the tree illustrated below using the rectangle shown in dashed red lines, the result will be an empty list. What are the nodes in the tree that must be tested by the algorithm? When we say a note is tested by the algorithm, we mean the line with a comment of `test t in rect` in [kdtree2a.py](https://github.com/gisalgs/indexing/blob/master/kdtree2a.py) is called. Apparently not every point will come to this line because of the various `return` statements before the line. You can answer this question by either slightly modifying the query function to print out the points that come to there and run it. If you choose this approach, the rectangle can be encoded as follows:\n",
+    "Now we get back to the larger data set. This time we use a k-D tree for this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = time.time()\n",
+    "points_alot = [Point(p[0], p[1], 0) for p in [(random.uniform(0, 100), random.uniform(0, 100)) for _ in range(1000000)]]\n",
+    "t2 = time.time()\n",
+    "print(f'Time for data generation: {t2-t1}')\n",
+    "\n",
+    "t1 = time.time()\n",
+    "found = search_all(points_alot, rect)\n",
+    "t2 = time.time()\n",
+    "t_brute_force = t2-t1\n",
+    "\n",
+    "print(f'Brute-force found {len(found)} in {t_brute_force:.4f} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = time.time()\n",
+    "t1mil = kdtree2(points_alot)\n",
+    "t2 = time.time()\n",
+    "\n",
+    "print(f'Time creating the tree {t2-t1}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 3: Calculating the depth of a binary tree</font>\n",
+    "\n",
+    "Let see how big the tree for one million points is. If we try to guess before we do anything, what would be your guess? 100 depths? The truth will surprise most people.\n",
+    "\n",
+    "Let's write a short function to calculate the depth of a binary tree and run it on tree `t1mil`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "# Write a function called depth that takes the root of a tree as the input and \n",
+    "# returns the maximum depth (i.e. height) of the tree\n",
+    "#\n",
+    "# Then apply the function on t1mil\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = time.time()\n",
+    "found = []\n",
+    "range_query_orthogonal(t1mil, rect, found)\n",
+    "\n",
+    "t2 = time.time()\n",
+    "t_kd_tree = t2-t1\n",
+    "print(f'k-D tree found {len(found)} in {t_kd_tree:.4f} seconds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 4</font>\n",
+    "\n",
+    "Complete the code below for a bar chart."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# TODO\n",
+    "# \n",
+    "# Draw a barchart to show the difference between brute force search and k-D tree search\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a takehome message: it may not take much (in terms of the size of a tree) to index a huge amount of points and a lot can be gained. We should also note the cost of building the tree. We will discuss more of this at the end of this section when we focus on computational issues of indexing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 5</font>\n",
+    "\n",
+    "If we do an orthogonal range query on the tree illustrated below using the rectangle shown in dashed red lines, the result will be an empty list. What are the nodes in the tree that must be tested by the algorithm? When we say a note is *tested* by the algorithm, we mean the line with a comment of `test t in rect` in [kdtree2a.py](https://github.com/gisalgs/indexing/blob/master/kdtree2a.py) is called. Apparently not every point will come to this line because of the various `return` statements before the line. You can answer this question by slightly modifying the query function to print out the points that come to there and run it. If you choose this approach, the rectangle can be encoded as follows:\n",
     "\n",
     "```python\n",
     "rect = [ [2, 7.5], [8.5, 11.5] ]\n",
@@ -208,9 +334,172 @@
     "\n",
     "You can also answer this question using a visual examination of the following figure. \n",
     "\n",
-    "<img width=\"450\" src=\"figures/kdtree-range-query-1.png\"/>\n",
+    "<img width=\"450\" src=\"../tutorials/figures/kdtree-range-query-1.png\"/>\n",
     "\n",
-    "Please add more code/markdown cells whenever needed."
+    "Add more code/markdown cells when needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Circular range query using k-D trees\n",
+    "\n",
+    "We are going to test circular range query using k-D trees by comparing it with a brute-force search. The circular range query is implemented in the `kdtree2b` module and can be imported as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from indexing.kdtree2b import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 6</font>\n",
+    "\n",
+    "*Complete the three TODO's below.*\n",
+    "\n",
+    "We will use the same list of one million points that are randomly placed in a box of 0 to 100 on both X and Y coordinates. We set the \"range\" to be a circle centered at (1, 3) with a radius of 1.2345. \n",
+    "\n",
+    "We will also write a function to test whether a point is in a circle. But this function is a little more complicated and it is better to write it as a regular function (v. a lambda function)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "# Complete the function\n",
+    "\n",
+    "def in_circle(p, center, radius):\n",
+    "    '''\n",
+    "    Returns True if point p is in a circle defined by center and radius, False otherwise\n",
+    "    '''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "center = Point(1, 3)\n",
+    "radius = 1.2345\n",
+    "\n",
+    "def search_all_circle(all_points, center, radius):\n",
+    "    '''\n",
+    "    Returns the points that fall in a circle\n",
+    "\n",
+    "    Input\n",
+    "        all_points    a list of Point objects\n",
+    "        center        center of circle, a Point object\n",
+    "        radius        float\n",
+    "\n",
+    "    Output\n",
+    "        found         a list of Point objects\n",
+    "    '''\n",
+    "    # TODO:\n",
+    "    #\n",
+    "    #    Complete the code for a brute-force search\n",
+    "    #    Make sure the code aligns inside the function\n",
+    "\n",
+    "\n",
+    "    \n",
+    "# testing using one million points\n",
+    "\n",
+    "t1 = time.time()\n",
+    "found = search_all_circle(points_alot, center, radius)\n",
+    "t2 = time.time()\n",
+    "\n",
+    "t2-t1, len(found)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "found2 = []\n",
+    "\n",
+    "t3 = time.time()\n",
+    "range_query_circular(t1mil, center, radius, found2)\n",
+    "t4 = time.time()\n",
+    "\n",
+    "print(f'Circular found {len(found2)} in {t4-t3:.4f} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in found2:\n",
+    "    if p not in found:\n",
+    "        print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do we know the points in `found` and `found2` are unique? We will have to test that too. For most lists, we can convert them to a Python set and check if the length of the set is as same as the original list. But a list of Point objects cannot use that approach because Point is not hashable -- Python doesn't know how to convert a Point object into a fixed length integer. For an object to be hashable, we need to override the `__hash__` method, which isn't the case for the `Point` class. This is not a big deal for our situation since we can check the uniqueness in other ways (we do have a way to compare the equality of two Point objects, which should be enough here)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO\n",
+    "#\n",
+    "# Define a function called unique and use it on found and found2\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <font color=\"red\">Question 7</font>\n",
+    "\n",
+    "Read page 84 of the textbook (*GIS Algorithms*). In the next cell, use your own words to describe how circular range query using a k-D tree works. \n",
+    "\n",
+    "Also, Listing 5.3 on page 84 of the textbook was written in Python 2. If we directly copy and paste the code in Python 3, which line MUST be changed in order for it to run in Python 3? Write the line number in the cell below as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer in this cell:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Key: Line 27 should be changed to \n",
+    "\n",
+    "`print(found)`"
    ]
   }
  ],
@@ -230,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
